<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top|center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.horario.matias.horario.MainActivity">

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvPregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/tvPregunta"
            android:textColor="#000"
            android:textSize="22dp" />
    </TableRow>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="83dp"
        android:paddingRight="20dp"
        android:paddingTop="50dp">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/radioGroupClases"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbA1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="45dp"
                    android:gravity="center_horizontal"
                    android:text="@string/rbA1"
                    android:textColor="#000"
                    android:textSize="23dp" />

                <RadioButton
                    android:id="@+id/rbA2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/rbA2"
                    android:textColor="#000"
                    android:textSize="23dp" />
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="80dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tableRow2">

            <TextView
                android:text="@string/tvError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvError"
                android:textColor="#ff0000"
                android:visibility="gone"/>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btVerHorario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/botonInicial"
        android:textColor="#000"
        android:textSize="20dp" />
</LinearLayout>



